# python-django-mailing-service

./: .env_example  .gitignore  README.md  celerybeat-schedule.db  data_base.json  dump.rdb  manage.py  pyproject.toml
blogs/: forms.py  models.py  services.py  urls.py  utils.py  views.py
blogs/migrations/: 0001_initial.py  0002_remove_blogpost_preview_blogpost_image.py  0003_alter_blogpost_view_count.py
config/: celery.py  settings.py  urls.py
mailing_service/: admin.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
mailing_service/migrations/: 0001_initial.py  0002_message_alter_client_options.py  0003_message_sent_at.py  0004_remove_message_sent_at_mailings.py  0005_rename_mailings_mailing.py  0006_alter_mailing_first_send.py  0007_alter_mailing_first_send.py  0008_remove_mailing_clients_mailing_client_and_more.py  0009_alter_mailing_finish_send.py  0010_mailinglogs.py  0011_alter_mailing_finish_send.py  0012_alter_mailing_client.py  0013_alter_mailing_client.py  0014_alter_mailing_first_send.py  0015_alter_mailing_first_send.py  0016_alter_mailing_finish_send_alter_mailing_first_send.py  0017_alter_mailing_finish_send_alter_mailing_first_send.py  0018_alter_mailing_finish_send_alter_mailing_first_send.py  0019_alter_mailing_finish_send_alter_mailing_first_send.py  0020_alter_mailing_finish_send_alter_mailing_first_send.py  0021_alter_mailing_finish_send_alter_mailing_first_send.py  0023_alter_mailing_client.py  (+10 more)
main/: forms.py  urls.py  views.py
users/: admin.py  forms.py  middleware.py  models.py  services.py  urls.py  views.py
(+68 files in other folders)
