[tool.poetry]
name = "coursework-6"
version = "0.1.0"
description = ""
authors = ["Sprite_Spirit <Sprite.spirit.t.me@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
django-apscheduler = "^0.6.2"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
clients = "^1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
