[tool.poetry]
name = "coursework-6"
version = "0.1.0"
description = ""
authors = ["Sprite_Spirit <Sprite.spirit.t.me@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
django-apscheduler = "^0.6.2"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
clients = "^1.5"
django-celery-beat = "^2.6.0"
pytz = "^2024.1"
datetime = "^5.5"
redis = "^5.0.6"
django-celery-results = "^2.5.1"
kombu = "^5.3.7"
django-bootstrap-datepicker-plus = "^5.0.5"
django-phonenumber-field = "^8.0.0"
django-countries = "^7.6.1"
django-phonenumbers = "^1.0.1"
pillow = "^10.4.0"
django-birthday = "^0.1.4"
pycountry = "^24.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
